# eFlow

./: .gitignore  COMMIT_GUIDELINES.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
Explorer/: README.md  __init__.py  backend_cli.py  cli_app.py  example_usage.py  hecras_explorer.py  quick_test.py  requirements.txt  setup.py
scripts/: README.md
scripts/linux/: build.sh  download-py.sh
scripts/macos/: build.sh  download-py.sh
scripts/windows/: build.ps1  download-py.ps1
src/: App.tsx  globals.css  main.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  hdf5_analyzer.rs.bak  pyproject.toml  pytest.ini  run_tests.py  simple_test.py  tauri.bundle.json  tauri.conf.json  test_backend.py
src-tauri/capabilities/: default.json
src-tauri/examples/: hdf5_usage.rs
src-tauri/src/: hdf5_analyzer.rs  lib.rs  main.rs
src-tauri/src-python/eFlow/: __init__.py  __main__.py  app.py  ext_mod.py
src-tauri/src-python/eFlow/commands/: __init__.py  basic_commands.py  hdf_commands.py  hdf_explorer_commands.py
src-tauri/src-python/eFlow/models/: __init__.py  base.py  hdf_models.py
src-tauri/src-python/eFlow/utils/: __init__.py  backend_cli.py  file_utils.py  hdf_utils.py  ras_commander_utils.py  vtk_utils.py
src-tauri/tests/: README.md  __init__.py  conftest.py  test_basic_commands.py  test_hdf_commands.py  test_hdf_comprehensive.py  test_hdf_simple.py  test_hdf_utils.py  test_integration.py  test_models.py
src/components/: HDF_DatasetTable.tsx  HDF_Explorer.tsx  (+16 more)
(+16 files in other folders)
