[project]
name = "eFlow"
version = "0.1.0"
description = "App for HEC-RAS 2D analysis and visualization, calculations"
readme = "README.md"
authors = [
    { name = "Crhistian Cornejo" }
]
requires-python = ">=3.11"
dependencies = [
    "pytauri == 0.6.*",
    "pydantic == 2.*",
    "anyio == 4.*",
    "h5py>=3.8.0",
    "numpy>=2.3.1",
    "matplotlib>=3.5.0",
    "pyvista>=0.38.0",
    "plotly>=6.2.0",
    "vtk>=9.2.0",
    "scipy>=1.10.0",
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "ras-commander>=0.52.0",
    "pathlib2>=2.3.7.post1",
    "tabulate>=0.9.0",
]

[project.entry-points.pytauri]
ext_mod = "eFlow.ext_mod"

[build-system]
requires = ["setuptools>=61", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["src-python"] }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
